--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,21 +1,44 @@
-<!DOCTYPE html/>
-
-<h1>Login</h1>
-
-<% if (messages.error) { %>
-    <%= messages.error %>
-<% } %>
-
-<form action="/login" method="POST">
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required placeholder="Enter a username"/>
+<div class="row mt-5">
+    <div class="col-md-6 m-auto">
+      <div class="card card-body">
+        <h1 class="text-center mb-3"><i class="fab fa-node-js fa-3x"></i> </h1>
+        <h2 class="text-center mb-3">Login</h2>
+        <form action="/login" method="POST">
+            <div class="form-group">
+                <label for="username">User Name</label>
+                <input
+                    type="text"
+                    id="username"
+                    name="username"
+                    class="form-control"
+                    placeholder="Enter User Name"
+                />
+            </div>
+          <!-- <div class="form-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="form-control"
+              placeholder="Enter Email"
+            />
+          </div> -->
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              class="form-control"
+              placeholder="Enter Password"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
+        <p class="lead mt-4">
+          No Account? <a href="/register">Register</a>
+        </p>
+      </div>
     </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="text" id="password" name="password" required placeholder="Enter a password"/>
-    </div>
-    <button type="submit">Log in</button>
-</form>
-
-<a href="/register">Register</a>
+  </div>
