--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,59 @@
-<!DOCTYPE html/>
+<div class="row mt-5">
+    <div class="col-md-6 m-auto">
+      <div class="card card-body">
+        <h1 class="text-center mb-3"><i class="fab fa-node-js fa-3x"></i> </h1>
+        <h2 class="text-center mb-3">Register</h2>
 
-<h1>Register</h1>
-
-<form action="/register" method="POST">
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required placeholder="Enter a username"/>
+        <form action="/register" method="POST">
+          <div class="form-group">
+            <label for="name">User Name</label>
+            <input
+              type="username"
+              id="username"
+              name="username"
+              class="form-control"
+              placeholder="Enter User Name"
+              value="<%= typeof name != 'undefined' ? username : '' %>"
+            />
+          </div>
+          <!-- <div class="form-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              class="form-control"
+              placeholder="Enter Email"
+              value="<%= typeof email != 'undefined' ? email : '' %>"
+            />
+          </div> -->
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              class="form-control"
+              placeholder="Create Password"
+              value="<%= typeof password != 'undefined' ? password : '' %>"
+            />
+          </div>
+          <div class="form-group">
+            <label for="password2">Confirm Password</label>
+            <input
+              type="password"
+              id="password2"
+              name="password2"
+              class="form-control"
+              placeholder="Confirm Password"
+              value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">
+            Register
+          </button>
+        </form>
+        <p class="lead mt-4">Have An Account? <a href="/login">Login</a></p>
+      </div>
     </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="text" id="password" name="password" required placeholder="Enter a password"/>
-    </div>
-    <button type="submit">Register</button>
-</form>
-
-<a href="/login">Login</a>
+  </div>
