--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,8 @@
       <div class="card card-body">
         <h1 class="text-center mb-3"><i class="fab fa-node-js fa-3x"></i> </h1>
         <h2 class="text-center mb-3">Login</h2>
+
+        <!-- TODO: ejs partial/messages should go here, but ejs is too buggy to deal with right now -->
         <form action="/login" method="POST">
             <div class="form-group">
                 <label for="username">User Name</label>
