fixed the errors that occurred when trying to register a duplicate user name

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 error.js
 
-<% if (messages.error) { %>
-    <%= messages.error %>
+<% if(typeof errors != 'undefined') { %>
+    <% errors.forEach(function(error) { %>
+        <%= error.msg %>
+    <% }); %>
 <% } %>
 
