--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
     <div class="col-md-6 m-auto">
       <div class="card card-body">
         <h1 class="text-center mb-3"><i class="fab fa-node-js fa-3x"></i> </h1>
-        <h2 class="text-center mb-3">Login</h2>
+        <h2 class="text-center mb-3">E-Commerce REST API Login</h2>
 
         <%- include ./partials/messages %>
         <form action="/login" method="POST">
