added google oauth fa

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
         <h2 class="text-center mb-3">E-Commerce REST API Login</h2>
 
         <%- include ./partials/messages %>
+        <%- include ./partials/google-oauth-login %>
         <form action="/login" method="POST">
             <div class="form-group">
                 <label for="username">User Name</label>
