--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,7 @@
         <h2 class="text-center mb-3">Register</h2>
 
         <%- include ./partials/messages %>
+        <%- include ./partials/google-oauth-login %>
         <form action="/register" method="POST">
           <div class="form-group">
             <label for="name">User Name</label>
