implemented OAuth, but Local is disabled. Need to get both working. Probably refactor routes in /auth

--- a/views/partials/google-oauth-login.ejs
+++ b/views/partials/google-oauth-login.ejs
@@ -1,5 +1,7 @@
 <div class="form-group">
     <a class="btn btn-google-plus-style btn-lg btn-block" href="auth/google">
-        <i class="fa-brands fa-google"></i><span>Login with <strong>Google</strong></span>
+        <!-- <i class="fa-brands fa-google"></i> -->
+        <i class="fab fa-google left"></i>
+        <span>Login with <strong>Google</strong></span>
     </a>
 </div>
