minor cleanup. styled the login-with-google partial

--- a/views/partials/google-oauth-login.ejs
+++ b/views/partials/google-oauth-login.ejs
@@ -1,7 +1,9 @@
 <div class="form-group">
-    <a class="btn btn-google-plus-style btn-lg btn-block" href="auth/google">
+    <!-- <a class="btn btn-google-plus-style btn-lg btn-block" href="auth/google"> -->
+        <a class="btn btn-outline-info btn-block" href="auth/google">
         <!-- <i class="fa-brands fa-google"></i> -->
-        <i class="fab fa-google left"></i>
+        <i class="fab fa-google center"></i>
         <span>Login with <strong>Google</strong></span>
     </a>
 </div>
+
