--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
                     placeholder="Enter User Name"
                 />
             </div>
-          <!-- <div class="form-group">
+          <div class="form-group">
             <label for="email">Email</label>
             <input
               type="email"
@@ -26,7 +26,7 @@
               class="form-control"
               placeholder="Enter Email"
             />
-          </div> -->
+          </div>
           <div class="form-group">
             <label for="password">Password</label>
             <input
