--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,6 +41,7 @@
           </div>
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
+        <p class="lead mt-4">Don't have An Account? <a href="/register">Register</a></p>
       </div>
     </div>
   </div>
